# diffusion2d

./: .gitignore  README.md  pyproject.toml
grafml_diffusion2d/: diffusion2d.py  output.py
